# Clone-Meduzzen-back-end

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  prestart.py  pyproject.toml
alembic/: env.py
alembic/versions/: 01aa2914cdd6_migration_update_timezone_at_inv.py  2bd723a87540_migration_update.py  32d1953b204a_update_timezone.py  3bd852aa8991_add_unique_constraint_to_company_name.py  418304cb3be4_create_users_table.py  465cbc585fa6_migration_8.py  48c2c15f5ffd_create_users_table.py  501dcdd5bf1c_migration_update_timezone_at_inv.py  55c626b1a4ae_initial.py  6fc13056ea92_migration_9.py  7f18034d9781_migration_update.py  8d337a33a7ce_migration_update.py  8d72ec3976af_migration_3.py  901015c1bede_migration_2.py  92b73061a49f_migration_9_.py  99ec647c62ef_allow_age_to_be_null.py  a08ee91595ce_initial_migration.py  a8eccb111c78_update_timezone.py  ad1ce4c8a042_initial_migration.py  aec949182c4d_migration_9.py  b2f178cf8bfe_initial_migration.py  d91dbd38d1a8_initial_migration.py  d950e2281b07_create_users_table.py
app/: main.py
app/core/: config.py  logger.py
app/db/: database.py  redis.py  timestamp_mixin.py
app/routers/: auth.py  auth0.py  company.py  company_actions.py  health.py  owned_companies.py  user.py
app/schemas/: __init__.py  auth.py  auth0.py  company.py  company_actions.py  user.py
app/services/: auth0_service.py  auth_service.py  company.py  company_actions.py  user.py
app/tests/: test_auth.py  test_auth0.py  test_company_crud.py  test_connections.py  test_health.py  test_migrations.py  (+2 more)
(+7 files in other folders)
